tests/output/self_hosted/double_minus_error.txt
tests/double_minus_error.oomph:4: error: sorry, --x is not supported :(

    print(--thing)     # This errors
          ^^

